# steam-coop-game-suggestor

./: LICENSE  README.md  pyproject.toml
info/: steam_api_key.txt  steam_id.txt
src/: main.py
